# edu-cloud

./: .env.example  .gitignore  .gitleaks.toml  .semgrepignore  AGENTS.md  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  findings.md  frontmatter.schema.json  gates.json  pyproject.toml
.claude/: gates.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: codeql.yml  doc-stale-sweep.yml  steward-hard-gates.yml  test.yml
.quality/: known-pytest-failures.txt
.semgrep/: call-site-invariants.yml  steward-governance.yml
.task/: RESEARCH.md
.yuanqi/tasks/: fix-governance-empty-run-f1-f3.yml  yq-20260625-contractstrict-v2.yml  yq-20260625-dualcore-b1a-01.yml  yq-20260625-fixgate-01.yml  yq-20260626-legacy-claude-aux-retire.yml  yq-20260627-f1-doc-consistency.yml  yq-20260627-f3-registry-doctor.yml  yq-20260627-governance-audit-f1f3.yml  yq-20260628-steward-hard-gates.yml
alembic/: env.py
alembic/versions/: 0ef7a0f54171_add_grading_mode_to_grading_tasks.py  1085b71343ee_add_student_selection_id.py  185f6c3280b9_add_ai_engine_tables_artifacts_trace_.py  1a325e38e941_add_entity_memory_and_project_state_.py  2a40f59215de_add_edge_review_status.py  2bc5ab4977e5_add_assignments_selections.py  2cde4b537c7b_add_grading_assignments_and_grading_.py  30da2c2e9aa6_add_adaptive_learning_tables.py  360f62486518_add_annotations_to_grading_results.py  36e25241e55d_add_academic_tables_and_subject_.py  3ab6982f3aef_add_parent_id_to_questions.py  45c9d83d780e_add_student_id_card.py  46b200fa9704_add_concept_stats_table.py  4c337d512d00_add_capabilities_and_audit_logs_tables.py  51c91f4d98e8_add_edge_evidence_and_node_course_code.py  52af1c37bf14_add_menu_and_analysis_tables.py  7c3052a2ed11_add_question_ids_to_grading_tasks.py  (+33 more)
conftest/: steward_scope.rego
control/: execution_policy.yaml  governance.yaml  review_receipts.yaml
data/: essay_blind_test_20260504_233615.json
docs/: 2026-04-26-tech-debt-audit.md  2026-05-08-fix-plan-consensus.md  2026-05-08-health-audit-claude-gpt.md  2026-05-09-health-audit-handoff.md  2026-05-09-health-audit-remaining-handoff.md  2026-05-09-security-fix-handoff.md  2026-05-11-full-audit-report.md  2026-05-11-root-cause-fix-handoff.md  2026-05-15-silent-degradation-investigation.md  2026-06-04-project-deep-investigation.md  2026-06-04-runtime-security-investigation-report.md  FREEZE.md  ai-grading-full-data.json  ai-grading-report.html  edu-audit-repair-handoff.md  essay-scoring-handoff.md  marking-assign-handoff.md  permission-isolation-handoff.md  scan-calibration-handoff.md  security-audit-permission-isolation-2026-05-08.md  sidebar-modular-restore-handoff.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend-nuxt/: nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
scripts/: batch_regrade_test.py  bench_llm_concurrency.py  branch-check  calibrate_scan.py  calibrate_universal.py  codex-check  codex-consult-claude  codex-context  codex-verify  codex_support.py  db_branch  db_doctor.py  db_migrate  e2e_agent_evolution.py  e2e_joint_exam.py  edu-log  edu-log-maintain  generate_teaching_analysis.py  guardian-watch  guardian_runtime.py  import_mcu_planning_weights.py  meta-check  meta_runtime.py  migrate_knowledge_hierarchy.py  new-module  pytest_delta.py  run-arq-worker  seed_data.py  seed_menus.py  setup_ecs_dev.sh  subagent-worktree-bootstrap  sync_concept_graph.py  test_q28_single.py  truth  truth-doctor.sh  truth-status.sh  update_ai_grading_static_report.py
tests/: _module_seed.py  conftest.py  test_alembic_migration.py  test_alembic_s1a_bank.py  test_alembic_s1c_admin.py  test_config_compat.py  test_route_snapshot.py  test_router_registry.py  test_startup_checks.py  test_tasks.py
(+2259 files in other folders)
