[project]
name = "edu-cloud"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "arq>=0.26",
    "redis>=5.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "python-multipart>=0.0.9",
    "opencv-python-headless>=4.8",
    "pyzbar>=0.1.9",
    "aiosqlite>=0.22.1",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "reportlab>=4.4.10",
    "qrcode[pil]>=8.2",
    "python-dateutil>=2.9.0.post0",
    "lxml>=6.0.4",
    "python-docx>=1.1.0",
    "google-genai>=1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "playwright>=1.40",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
